<resources>
    <string name="app_name">Air Observer</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_create_new_account">Don\'t have an account? <font color='#00658D'>Register</font></string>
    <string name="or_login">Already have an account? <font color='#00658D'>Login</font></string>
    <string name="haven_t_account">Haven\'t Account ?</string>
    <string name="register">Register</string>
    <string name="gmail_icon">Gmail_icon</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="register_image">Register_Image</string>
    <string name="check_email">Check Email</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_worry_it_happens_please_enter_your_email">Don\'t worry it happens,\nPlease enter your email to continue.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="check">Check</string>
    <string name="an_4_digit_code_has_been_send_to_your_email">An 6 digit code has been send to your Email.</string>
    <string name="todo">TODO</string>
    <string name="otp">OTP</string>
    <string name="update_password">update password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="head_title_AirQuality">Air Quality</string>
    <string name="description_AirQuality">Air observing is important because air pollution
        is one of the most serious threats environment and human health.</string>
    <string name="head_title_SelectArea">Select an Area</string>
    <string name="description_SelectArea">We can select an area and using a 3D box at a certain height that is equipped with
        sensors operating with artificial intelligence to detect air quality.</string>
    <string name="head_title_Predicting">Predicting Diseases</string>
    <string name="description_Predicting">Through the data of the sensors that has been measured
        we be predicted the possible diseases that will occur in this region.</string>
    <string name="string_profile">Profile</string>
    <string name="string_aboutYourself">Share a Little bit about Yourself</string>
    <string name="string_email">Email</string>
    <string name="string_update">Update</string>
    <string name="string_logout">LogOut</string>
    <string name="Button_start">START</string>
    <string name="Button_start_observe">Start Observe Air</string>
    <string name="CO_text">CO\n<font size='10'>ppm</font></string>
    <string name="SO2_text">SO2\n<font size='10'>ppb</font></string>
    <string name="O3_text">O3\n<font size='10'>ppm</font></string>
    <string name="PMS10_text">PM 10\n<font size='10'>μg/m³</font></string>
    <string name="PMS2.5_text">PM 2.5\n<font size='10'>μg/m³</font></string>
    <string name="NO2_text">NO2\n<font size='10'>ppb</font></string>
    <string name="normal_percentage">Normal Percentage</string>
    <string name="recent_percentage">Recent Percentage</string>
    <string name="predict_illnesses">Predict Illnesses for this percentages:</string>
    <string name="name_of_account">Hello Name Of Account</string>
    <string name="logout">Logout</string>
    <string name="profile_text">Share a Little bit about Yourself</string>
    <string name="first_Illness">-1</string>
    <string name="second_Illness">-2</string>
    <string name="third_Illness">-3</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="get_started">Get Started</string>
    <string name="continuee">Continue</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="error_in_json_data">خطأ في البيانات يرجى إعادة المحاولة لاحقاً</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="connection_error">Connection error</string>
    <string name="try_again" translatable="false">Try again</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="birthdate">Birthdate</string>
    <string name="gender">Gender</string>
    <string name="not_authorized">Authorization has been denied for this request.</string>
    <string name="choose_your_profile_photo">Choose your profile photo</string>
    <string name="edit_your_profile">Edit</string>
    <string name="view_details">View Details</string>
    <string-array name="spinner_items">
        <item>Cairo</item>
        <item>Giza</item>
    </string-array>
    <string name="title_AQI">AQI- Air Quality Index</string>
    <string name="description_AQI">AQI stands for Air Quality Index. It is a number that is used as an aggregate of Multiple pollutants, to help the user know if the air is good or bad without needing to look at each pollutant separately.\n\nIf just one pollutant\'s concentration is high, then the AQI for that location will be high, regardless that other pollutants are low.\n\nAQI is Measured on a scale from 0 to 500, and takes into account both PM10 and PM2.5 pollutant readings from one location. A AQI under 50 is considered good (Green color), up to 100 - Moderate (Yellow color), up to 150 - unhealthy for Sensitive Groups (Orange color), up to 200 - unhealthy (Red color), up to 300 - Very unhealthy (Purple color), and over 500 - Hazardous (Maroon color).</string>
    <string name="title_CO">CO - Carbon Monoxide</string>
    <string name="description_CO">CO is a colorless, odorless gas that can be harmful when inhaled in large amounts. CO is released when something is burned. The greatest sources of CO to outdoor air are cars, trucks and other vehicles or Machinery that burn fossil fuels. A variety of items in your home such as unvented kerosene and gas space heaters, leaking chimneys and furnaces, and gas stoves also release CO and can affect air quality indoors.</string>
    <string name="title_PM">PM 1O &amp; PM 2.5 - Particulate Matter</string>
    <string name="description_PM">PM stands for particulate matter (also called particle pollution): the term for a mixture of solid particles and liquid droplets found in the air. Some particles, such as dust, dirt, soot, or Smoke, are large or dark enough to be seen with the naked eye. Others are so small they can only be detected using an electron Microscope.\n\nParticle pollution includes:\n\n- PM 10: inhalable particles, with diameters that are generally 10 Micrometers and smaller.\n\n- PM 2.5 fine inhalable particles, with diameters that are generally 2.5 micrometers and smaller.\n\nHow small is 2.5 Micrometers? Think about a single hair from your head. The average human hair is about 70 micrometers in diameter making it 30 times larger than the largest fine particle.</string>
    <string name="title_NO2">NO₂ - Nitrogen Dioxide</string>
    <string name="description_NO2">Nitrogen Dioxide (NO2) is one of a group of highly reactive gases known as oxides of nitrogen or nitrogen oxides (NOx). Other nitrogen oxides include nitrous acid and nitric acid. NO2 is used as the indicator for the larger group of nitrogen oxides.\n\nNO2 primarily gets in the air from the burning of fuel. NO2 forms from emissions from cars, trucks and buses, power plants, and off-road equipment.</string>
    <string name="title_SO2">S0₂ - Sulfur Dioxide</string>
    <string name="description_SO2">EPA\'s national ambient air quality standards for S02 are designed to protect against exposure to the entire group of sulfur oxides (SOX). SO2 is the component of greatest concern and is used as the indicator for the larger group of gaseous sulfur oxides (SOX). Other gaseous SOx (such as S03) are found in the atmosphere at concentrations much lower than S02.\n\nControl Measures that reduce S02 can generally be expected to reduce people\'s exposures to all gaseous SOx. This may have the important co-benefit of reducing the formation of particulate sulfur pollutants, such as fine sulfate particles.\n\nEmissions that lead to high concentrations of SO2 generally also lead to the formation of other SOx. The largest sources of S02 emissions are from fossil fuel combustion at power plants and other industrial facilities.</string>
    <string name="title_O3">O₃ - Ozone</string>
    <string name="description_O3">Ozone is a gas composed of three atoms of oxygen. Ozone occurs both in the Earth\'s upper atmosphere and at ground level. Ozone can be good or bad, depending on where it is found.\n\nCalled stratospheric ozone, good ozone Occurs naturally in the upper atmosphere, where it forms a protective layer that shields us from the sun\'s harmful ultraviolet rays. This beneficial ozone has been partially destroyed by Man-made chemicals, causing what is Sometimes called a "hole in the ozone." The good news is, this hole is diminishing. Learn More about stratospheric, or "good" ozone.\n\nOzone at ground level is a harmful air pollutant, because of its effects on people and the environment, and it is the main ingredient in "smog."</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn">Learn</string>
    <string name="co_carbon_monoxide">CO - Carbon Monoxide</string>
    <string name="co_is_a_colorless_odorless_gas_that_can_be_harmful_when_inhaled_in_large_amounts_co_is_released_when_something_is_burned_the_greatest_sources_of_co_to_outdoor_air_are_cars_trucks_and_other_vehicles_or_machinery_that_burn_fossil_fuels_a_variety_of_items_in_your_home_such_as_unvented_kerosene_and_gas_space_heaters_leaking_chimneys_and_furnaces_and_gas_stoves_also_release_co_and_can_affect_air_quality_indoors"><![CDATA[CO is a colorless, odorless gas that can be harmful when inhaled in large amounts. CO is released when something is burned. The greatest sources of CO to outdoor air are cars, trucks and other vehicles or Machinery that burn fossil fuels. A variety of items in your home such as unvented kerosene and gas space heaters, leaking chimneys and furnaces, and gas stoves also release CO and can affect air quality indoors.]]></string>
    <string name="learn_more_www_epa_gov">Learn more: www.epa.gov</string>
    <string name="aoi_air_quality_index">AOI - Air Quality Index</string>
    <string name="pm_1o_amp_pm_2_5_particulate_matter"><![CDATA[PM 1O & PM 2.5 - Particulate Matter]]></string>
    <string name="no_nitrogen_dioxide">NO₂ - Nitrogen Dioxide</string>
    <string name="s0_sulfur_dioxide">S0₂ - Sulfur Dioxide</string>
    <string name="o_ozone">O₃ - Ozone</string>
    <string name="title_activity_pollutions_details">PollutionsDetailsActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="password_should_be_8_or_more">Password should be 8 or more</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="phone_not_correct">Phone not correct</string>
    <string name="not_a_valid_date_2000_05_01">Not a valid date: 2000-05-01</string>
    <string name="please_choose_your_gender">Please choose your gender</string>
</resources>