<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_24"
        android:contentDescription="@string/home"
        android:enabled="true"
        />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/time_past_24"
        android:contentDescription="@string/history"
        android:enabled="true"
        />
    <item
        android:id="@+id/learnFragment"
        android:icon="@drawable/newspaper_"
        android:contentDescription="@string/learn"
        android:enabled="true"
        />
   <!-- <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account"
        android:contentDescription="@string/profile"
        android:enabled="true"
        android:title="@string/profile" />-->
</menu>