<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_or_login"
        style="@style/text_style"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/or_login"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

    <ImageView
        android:id="@+id/iv_signup"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_250dp"
        android:layout_margin="@dimen/dimen_25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_welcome" />

    <TextView
        android:id="@+id/tv_signup"
        style="@style/text_style_black_30sp_bold"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_marginHorizontal="@dimen/dimen_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_firstname"
        style="@style/edit_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_firstname"
            style="@style/edit_text_input_style"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_lastname"
        style="@style/edit_text_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_lastname"
            style="@style/edit_text_input_style"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_lastname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            style="@style/edit_text_input_style"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_phone"
            style="@style/edit_text_input_style"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_date"
            style="@style/edit_text_input_style"
            android:hint="@string/birthdate"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_gender"
        style="@style/drop_down_menu_style"
        android:layout_marginTop="16dp"
        android:hint="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_date">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteGender"
            style="@style/edit_text_input_style"
            android:drawableEnd="@drawable/ic_mail"
            android:inputType="none"
            android:text="@string/gender"
            tools:text="Gender" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/edit_text_style"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_gender"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            style="@style/edit_text_input_style"
            android:hint="@string/password"
            android:inputType="textPassword|textCapWords|textCapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/button_style_blue_margin_horizontal_32dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <include
        android:id="@+id/progressBar"
        layout="@layout/progressbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>