<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/im_update"
        style="@style/main_image"
        android:contentDescription="@string/update_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_update_re_swkp" />

    <TextView
        android:id="@+id/tv_resetpas"
        android:layout_width="122dp"
        android:layout_height="66dp"
        android:text="@string/reset_password"
        style="@style/text"
        app:layout_constraintEnd_toEndOf="@+id/im_update"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="@+id/im_update"
        app:layout_constraintTop_toBottomOf="@+id/im_update" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmpass"
        style="@style/til"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/im_update"
        app:layout_constraintStart_toStartOf="@+id/til_newpass"
        app:layout_constraintTop_toBottomOf="@+id/til_newpass"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_confirmnewpas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword|textCapWords|textCapCharacters"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm"
        android:text="@string/confirm"
        style="@style/btn_style"
        app:layout_constraintEnd_toEndOf="@+id/til_confirmpass"
        app:layout_constraintStart_toStartOf="@+id/til_confirmpass"
        app:layout_constraintTop_toBottomOf="@+id/til_confirmpass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_newpass"
        style="@style/til"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@+id/im_update"
        app:layout_constraintStart_toStartOf="@+id/tv_resetpas"
        app:layout_constraintTop_toBottomOf="@+id/tv_resetpas"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_newpas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword|textCapWords|textCapCharacters"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>