<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_orlogup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12"
        android:layout_weight="1"
        android:text="@string/or_login_with"
        android:textColor="#616161"
        android:textSize="@dimen/text_size18"
        app:layout_constraintEnd_toEndOf="@+id/til_pasup"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/til_pasup"
        app:layout_constraintTop_toBottomOf="@+id/til_pasup"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/im_gmailup"
        android:layout_width="@dimen/dimen_55"
        android:layout_height="@dimen/dimen_56"
        android:layout_marginTop="@dimen/dimen_8"
        android:contentDescription="@string/gmail_icon"
        android:src="@tools:sample/avatars"
        app:layout_constraintEnd_toEndOf="@+id/tv_orlogup"
        app:layout_constraintStart_toStartOf="@+id/tv_orlogup"
        app:layout_constraintTop_toBottomOf="@+id/tv_orlogup"
        app:srcCompat="@drawable/icons8_google" />

    <ImageView
        android:id="@+id/im_signup"
        style="@style/main_image"
        android:contentDescription="@string/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/undraw_wishes_icyp" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        style="@style/text"
        app:layout_constraintBottom_toTopOf="@+id/til_fullname"
        app:layout_constraintEnd_toEndOf="@+id/im_signup"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="@+id/im_signup"
        app:layout_constraintTop_toBottomOf="@+id/im_signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fullname"
        style="@style/til"
        app:boxBackgroundColor="#70FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/im_signup"
        app:layout_constraintStart_toStartOf="@+id/tv_signup"
        app:layout_constraintTop_toBottomOf="@+id/tv_signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:textColorHint="@color/transparency"
            tools:ignore="TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_emailup"
        style="@style/til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/til_fullname"
        app:layout_constraintTop_toBottomOf="@+id/til_fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/transparency"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_pasup"
        style="@style/til"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/til_emailup"
        app:layout_constraintTop_toBottomOf="@+id/til_emailup"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/in_pasup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword|textCapWords|textCapCharacters"
            android:textColorHint="@color/transparency"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reg"
        style="@style/btn_style"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/til_pasup"
        app:layout_constraintStart_toStartOf="@+id/til_pasup"
        app:layout_constraintTop_toBottomOf="@+id/im_gmailup" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>