<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.OnBoardingActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip"
        style="@style/button_style_transparent_text_blue"
        android:text="@string/skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        style="@style/button_style_transparent_text_blue"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_previous"
        style="@style/button_style_transparent_text_blue"
        android:text="@string/previous"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_get_started"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        app:layout_constraintBottom_toTopOf="@+id/indicator_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_skip" />

    <LinearLayout
        android:id="@+id/indicator_layout"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_previous"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view_pager2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_get_started"
        style="@style/button_style_blue_margin_horizontal_32dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/get_started"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>